# rust-api

./: .env  Cargo.toml  README.md
migrations/2022-08-20-065441_create_books/: down.sql  up.sql
migrations/2022-08-21-063312_create_books/: up.sql
public/: 404.html  index.html
src/: main.rs  models.rs  routes.rs  static_files.rs
