[package]
name = "rust-api"
version = "0.1.0"

[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"]}
dotenv = "0.15.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"


rocket = "0.4.0-dev"
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket"}

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]